--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,109 @@
     width: 960px;
 }
 
-.falseBtn{
-    color: rgb(86, 16, 92);
-}
 
-.trueBtn{
-color: teal;
+.start{
+    width: 960px;
+    float: none;
+    margin-right: auto;
+    margin-left: auto;
+  
 }
-
 .startBtn{
-    color: pink;
+    color:white;
+    background-color:rgb(145, 185, 145);
+    width: 350px;
+    margin-left: 350px ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   border-color: white;
+}
+
+button{
+    margin-top: 150px;
+
+}
+body, html {
+    height: 100%;
+} 
+
+/* The hero image- Resource: W3 Schools */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/Trivia\ Header\ Image.jpg");
+
+  /* Set a specific height */
+  height: 50%;
+  
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+
+#timer{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 400px;
+    color: white;
+    background-color: rgb(145, 185, 145);
+    height: 60px;
+   text-align: center;
+
+}
+
+.game{
+/* margin-top: 15px; */
+/* background-image: linear-gradient(rgba(255, 255, 255, 0.694), rgba(255, 255, 255, 0.482)), url("../images/Questions\ Background.jpg"); */
+padding-bottom: 150px;
+
+
+}
+
+.buttons{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* color: rgb(77, 76, 76); */
+   background-color:  rgb(145, 185, 145);
+   color: white;
+   padding-left: 50px;
+   padding-right: 50px;
+   width: 600px;
+   align-items: center;
+   float: none;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.questions{
+    margin-top: 25px;
+    width: 960px;
+    float: none;
+    margin-right: auto;
+    margin-left: auto;
+text-align: center;
+line-height: 40px;
+background-image: linear-gradient(rgba(255, 255, 255, 0.694), rgba(255, 255, 255, 0.482)), url("../images/Questions\ Background.jpg");
+border: solid 10px;
+border-color: rgb(145, 185, 145);
+margin-top: 50px;
+padding-top: 50px;
+padding-bottom: 50px;
+}
+
+h3{
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(77, 76, 76);
+  
 }
