--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,15 @@
     color:white;
     background-color:rgb(145, 185, 145);
     width: 350px;
-    margin-left: 350px ;
+    margin-left: auto;
+    margin-right: auto;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    border-color: white;
+   text-align: center;
 }
 
 button{
-    margin-top: 150px;
+    margin-top: 100px;
 
 }
 body, html {
@@ -108,3 +110,20 @@ h3{
     color: rgb(77, 76, 76);
   
 }
+
+h4{
+    font-size: 36px;
+}
+
+.scoreInfo{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    background-color:  rgb(145, 185, 145);
+    width: 960px;
+    height: 200px;
+    margin-top: 25px;
+    padding-top: 50px;
+    text-align: center;
+    line-height: 35px;
+}
+
