--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,3 +133,21 @@ padding-bottom: 150px;
     text-align: center;
 
 }
+
+
+@media screen and (max-width: 700px){
+    .start{
+        width: 500px;
+    float: none;
+    margin-right: auto;
+    margin-left: auto;
+    } 
+
+    .questions{
+        width: 400px;
+        /* float: none; */
+        margin-right: auto;
+        margin-left: auto;
+     }
+ }
+
