--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,9 +131,29 @@ padding-bottom: 150px;
     background-color: rgb(145, 185, 145);
     height: 60px;
     text-align: center;
+    font-weight: bold;
 
 }
 
+
+
+.answers:hover {
+    background-color: rgb(145, 185, 145);
+    
+}
+
+.answers {
+    text-align: center;
+    border: solid 2px black;
+    border-radius: 5px;
+    margin: 15px 25%;
+    
+}
+
+.image{
+    width: 600px;
+    height: 400px;
+}
 
 @media screen and (max-width: 700px){
     .start{
@@ -152,19 +172,3 @@ padding-bottom: 150px;
  }
 
 
- #timer {
-    font-weight: bold;
-}
-
-.answers:hover {
-    background-color: rgb(145, 185, 145);
-    
-}
-
-.answers {
-    text-align: center;
-    border: solid 2px black;
-    border-radius: 5px;
-    margin: 15px 25%;
-    
-}
