--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,9 +14,33 @@ h3{
      font-size: 36px;
  }
 
-.container{
-    width: 960px;
-}
+/* The hero image- Resource: W3 Schools */
+.hero-image {
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/Trivia\ Header\ Image.jpg");
+  
+    /* Set a specific height */
+    height: 50%;
+    
+  
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+  
+  /* Place text in the middle of the image */
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  }
+
 
 .start{
     width: 960px;
@@ -36,62 +60,16 @@ h3{
    text-align: center;
 }
 
-.doneBtn{
-    color:white;
-    background-color:rgb(145, 185, 145);
-    width: 350px;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-   border-color: white;
-   text-align: center;
-}
-
-
-/* The hero image- Resource: W3 Schools */
-.hero-image {
-  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/Trivia\ Header\ Image.jpg");
-
-  /* Set a specific height */
-  height: 50%;
-  
-
-  /* Position and center the image to scale nicely on all screens */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-/* Place text in the middle of the image */
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-}
-
 
 .game{
-padding-bottom: 150px;
+/* padding-bottom: 150px; */
+width: 960px;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-size: 20px;
+text-align: center;
 }
 
-.buttons{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-   background-color:  rgb(145, 185, 145);
-   color: white;
-   padding-left: 50px;
-   padding-right: 50px;
-   width: 600px;
-   align-items: center;
-   float: none;
-    margin-right: auto;
-    margin-left: auto;
-}
+
 
 .questions{
     margin-top: 25px;
@@ -129,10 +107,8 @@ padding-bottom: 150px;
     font-weight: 400px;
     color: white;
     background-color: rgb(145, 185, 145);
-    height: 60px;
     text-align: center;
     font-weight: bold;
-
 }
 
 
@@ -144,16 +120,28 @@ padding-bottom: 150px;
 
 .answers {
     text-align: center;
-    border: solid 2px black;
+    border: solid 1px black;
+    color: black;
     border-radius: 5px;
+    width: 500px;
     margin: 15px 25%;
-    
+    float: none;
+    margin-right: auto;
+    margin-left: auto; 
 }
 
 .image{
     width: 600px;
     height: 400px;
+    border: solid 5px rgb(145, 185, 145);
 }
+
+
+.correct, .incorrect, .timeUp {
+    font-size: 36px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 
 @media screen and (max-width: 700px){
     .start{
