--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,11 +67,12 @@ width: 960px;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 font-size: 20px;
 text-align: center;
+padding-bottom: 150px;
 }
 
 
 
-.questions{
+/* .questions{
     margin-top: 25px;
     width: 960px;
     float: none;
@@ -85,21 +86,8 @@ text-align: center;
     margin-top: 50px;
     padding-top: 50px;
     padding-bottom: 50px;
-    }
+    } */
 
-
-
-.scoreInfo{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: white;
-    background-color:  rgb(145, 185, 145);
-    width: 960px;
-    height: 200px;
-    margin-top: 25px;
-    padding-top: 50px;
-    text-align: center;
-    line-height: 35px;
-}
 
 
 #timer{
@@ -151,12 +139,6 @@ text-align: center;
     margin-left: auto;
     } 
 
-    .questions{
-        width: 400px;
-        /* float: none; */
-        margin-right: auto;
-        margin-left: auto;
-     }
  }
 
 
