--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,8 +43,7 @@ h3{
 
 
 .start{
-    width: 960px;
-    float: none;
+    
     margin-right: auto;
     margin-left: auto;
   
@@ -62,8 +61,10 @@ h3{
 
 
 .game{
-/* padding-bottom: 150px; */
-width: 960px;
+/* width: 960px; */
+margin-left: auto;
+margin-right: auto;
+
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 font-size: 20px;
 text-align: center;
@@ -113,14 +114,38 @@ padding-bottom: 150px;
 
 
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 500px){
     .start{
-        width: 500px;
-    float: none;
-    margin-right: auto;
-    margin-left: auto;
+        margin: auto;        
+    } 
+    .startBtn{
+        margin: auto;
     } 
 
+    .game{
+        margin: auto;  
+        
+    } 
+
+    .hero-image{
+        margin: auto;
+    }
+
+    .hero-text{
+        margin: auto;
+    }
+
+    /* .image{
+        margin: auto;
+        width: 400px;
+    height: 200px;
+
  }
+ .answers {
+    margin: auto;
+    width: 400px;
+height: 200px;
+ } */
 
 
+}
