--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,20 @@ button{
     margin-top: 100px;
 }
 body, html {
-    height: 100%;
-} 
+    
+  
+        /* background: url("../assets/images/wood\ with\ plant.jpg") no-repeat center center fixed;  */
+        /* -webkit-background-size: cover; */
+        /* -moz-background-size: cover; */
+        /* -o-background-size: cover; */
+        /* background-size: cover;  */
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        overflow-x: hidden; 
+    }
+
 
 h3{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -68,7 +80,13 @@ margin-right: auto;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 font-size: 20px;
 text-align: center;
-padding-bottom: 150px;
+margin-bottom: 150px;
+margin-top: 100px;
+background-image: linear-gradient(rgba(255, 255, 255, 0.372), rgba(255, 255, 255, 0.447)),url("../images/Questions\ Background.jpg");
+width: 100%;
+height:80%;
+padding-top: 50px;
+
 }
 
 
