--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,38 @@
-button{
-    margin-top: 100px;
-}
+
 body, html {
     
   
-        /* background: url("../assets/images/wood\ with\ plant.jpg") no-repeat center center fixed;  */
-        /* -webkit-background-size: cover; */
-        /* -moz-background-size: cover; */
-        /* -o-background-size: cover; */
-        /* background-size: cover;  */
+        /* background: linear-gradient(rgba(255, 255, 255, 0.372), rgba(255, 255, 255, 0.447)), url("../images/Questions\ Background.jpg") no-repeat center center fixed;  
+    -webkit-background-size: cover; 
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;   */
         width: 100%;
         height: 100%;
         margin: 0px;
         padding: 0px;
         overflow-x: hidden; 
+        background-color: #f1edea;
     }
 
 
-h3{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-     color: rgb(77, 76, 76);  
- }
- 
- h4{
-     font-size: 36px;
- }
 
-/* The hero image- Resource: W3 Schools */
+
+
+
+
+ 
+ /* Header  */
+
 .hero-image {
-    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/Trivia\ Header\ Image.jpg");
-  
-    /* Set a specific height */
-    height: 50%;
-    
-  
-    /* Position and center the image to scale nicely on all screens */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/childs\ white.jpg");
+    height: 65%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
   }
   
-  /* Place text in the middle of the image */
   .hero-text {
     text-align: center;
     position: absolute;
@@ -50,17 +40,49 @@ h3{
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family: 'Syncopate';
   }
 
+  h1{
+      font-size: 50px;
+  }
 
-.start{
-    
-    margin-right: auto;
-    margin-left: auto;
-  
+  /* Top Bar  */
+
+.top-bar{
+    min-height: 100px;
+    background-color: white;
 }
-.startBtn{
+
+h3{
+    font-family: 'Syncopate';
+     color: rgb(77, 76, 76);  
+     letter-spacing: 15%;
+     font-size: 40px;
+     padding-left: 50px;
+     padding-top: 35px;
+     padding-bottom: 25px;
+ }
+ 
+ h4{
+    font-family: 'Syncopate';
+    color: rgb(77, 76, 76);  
+     font-size: 18px;
+     padding-top: 45px;
+     padding-bottom: 25px;
+ }
+
+
+/* game intro bar  */
+#cover-image{
+    width: 783px;
+    height: 500px;
+ }
+
+ button{
+    margin-top: 200px;
+}
+ .startBtn{
     color:white;
     background-color:rgb(145, 185, 145);
     width: 350px;
@@ -69,24 +91,35 @@ h3{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    border-color: white;
    text-align: center;
+   font-family: 'Syncopate';
+
 }
 
+.start{
+    
+    margin-right: auto;
+    margin-left: auto;
+  
+}
+
+/* Game  */
+
+/* question and timer font  */
+p{
+    font-size: 28px;
+    }
 
 .game{
 /* width: 960px; */
 margin-left: auto;
 margin-right: auto;
 
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-font-size: 20px;
+font-family: 'Syncopate';
 text-align: center;
 margin-bottom: 150px;
-margin-top: 100px;
-background-image: linear-gradient(rgba(255, 255, 255, 0.372), rgba(255, 255, 255, 0.447)),url("../images/Questions\ Background.jpg");
-width: 100%;
+width: 60%;
 height:80%;
 padding-top: 50px;
-
 }
 
 
@@ -98,29 +131,35 @@ padding-top: 50px;
     text-align: center;
     font-weight: bold;
 }
+.strong {
+    background-color: tomato;
+}
 
-
+.answer{
+    background-color: teal;
+}
 
 .answers:hover {
-    background-color: rgb(145, 185, 145);
+ background-color: rgb(145, 185, 145);
     
 }
 
 .answers {
     text-align: center;
-    border: solid 1px black;
+    border: solid 1px rgb(145, 185, 145);
     color: black;
     border-radius: 5px;
-    width: 500px;
+    width: 200px;
     margin: 15px 25%;
     float: none;
     margin-right: auto;
     margin-left: auto; 
+    font-size: 15px;
 }
 
 .image{
-    width: 600px;
-    height: 400px;
+    width: 400px;
+    height: 300px;
     border: solid 5px rgb(145, 185, 145);
 }
 
