--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@ h3{
 p{
     font-size: 25px;
     font-family: 'Syncopate';
+    text-align: center;
     }
 
 p.correct, p.incorrect, p.answer{
@@ -137,7 +138,7 @@ flex-direction: column;
 
 font-family: 'Syncopate';
 text-align: left;
-margin-bottom: 150px;
+/* margin-bottom: 150px; */
 width: 60%;
 height:80%;
 padding-top: 10px;
@@ -202,6 +203,7 @@ padding-top: 10px;
     p{
     margin: auto;
     text-align: center;
+    font-size: 15px;
     }
 
     h4{
@@ -233,11 +235,14 @@ padding-top: 10px;
     .game{ 
         width: 100%;  
         padding-left: 0;  
+        margin-bottom: 15px;
     } 
 
     .gameR{
       width: 100%;
     }
+
+   
 
     #cover-image{
     width: 100%;
